grammars/weidu-tp2/grammar.js
        source_file: ($) =>
            choice(
                // TP2 file - prologue first (optional for error recovery), then everything else
                seq(
                    // Prologue (should come first if present - optional for malformed files)
                    optional($.backup_directive),
                    optional(choice($.author_directive, $.support_directive)),
                    // Everything else (flags, languages, components, actions)
                    repeat(choice($._top_level, $._action)),
                ),
                // Patch-only file (.tpp)
                $.patch_file,
            ),

        // Patch-only file (e.g., .tpp includes) - entire file is patches
        string: ($) => choice($.tilde_string, $.double_string, $.five_tilde_string, $.percent_string),

        tilde_string: ($) => seq("~", optional($.tilde_content), "~"),
        tilde_content: ($) => /[^~]+/,

        double_string: ($) => seq('"', optional($.double_content), '"'),
        double_content: ($) => /[^"]*/,

        number: ($) => choice(/-?[0-9]+(\.[0-9]+)*/, /0[xX][0-9a-fA-F]+/, /0[oO][0-7]+/, /0[bB][01]+/, /#-?[0-9]+/),

        tra_ref: ($) => /@-?[0-9]+/,

        identifier: ($) => /[A-Za-z_][A-Za-z0-9_#-]*/,

        // Unquoted resource reference (e.g., script.bcs, 00MYFILE.itm)
        variable_ref: ($) =>
            choice($.identifier, $.var_name_numeric, seq("%", choice($.identifier, $.var_name_numeric), "%")),

        // Variable name starting with a number (valid inside %...% and as array keys)
        var_name_numeric: ($) => /[0-9][A-Za-z0-9_#-]*/,

        _assignable: ($) => seq(optional("EVAL"), choice($.identifier, $.var_name_numeric, $.array_access, $.string)),

        // =========================================
        // MODIFIERS / FLAGS
        // =========================================

        _opt_no_backup: ($) => prec(10, choice("+", "-")),
        _opt_glob: ($) => choice("GLOB", "NOGLOB"),
        value: ($) => $._expr,

        // Simple value excludes OR/AND binary expressions - used where boolean operators shouldn't appear
        _expr: ($) =>
            choice(
                $.ternary_expr,
                $.binary_expr,
                $.unary_expr,
                $.paren_expr,
                $.evaluated_expr,
                // Memory access
                $.byte_at_expr,
                $.short_at_expr,
                $.long_at_expr,
                // Function-like expressions
                $.index_expr,
                $.rindex_expr,
                $.index_buffer_expr,
                $.rindex_buffer_expr,
                $.random_expr,
                $.ids_of_symbol_expr,
                $.resolve_str_ref_expr,
                $.state_which_says_expr,
                $.tra_entry_exists_expr,
                // Check expressions
                $.file_exists_expr,
                $.file_exists_in_game_expr,
                $.directory_exists_expr,
                $.file_is_in_compressed_biff_expr,
                $.file_size_expr,
                $.file_md5_expr,
                $.variable_is_set_expr,
                $.is_an_int_expr,
                $.game_is_expr,
                $.game_includes_expr,
                $.engine_is_expr,
                $.mod_is_installed_expr,
                $.id_of_label_expr,
                $.file_contains_expr,
                $.file_contains_evaluated_expr,
                $.string_length_expr,
                $.variable_is_in_array_expr,
                $.defined_as_function_expr,
                $.defined_as_inlined_expr,
                // Nullary expressions
                $.nullary_expr,
                $.array_access,
                $._primary,
            ),

        // Simple expression excludes OR/AND - only comparison and arithmetic binary ops
        _assign_op: ($) => choice("=", "+=", "-=", "*=", "/=", "|=", "&=", "||=", "&&="),

        // Control flow
        sound_ref: ($) => prec(5, seq("[", field("sound", choice($.identifier, $.variable_ref)), "]")),

        patch_replace_textually: ($) =>
            prec.right(
                seq(
                    "REPLACE_TEXTUALLY",
                    optional($.search_flags),
                    field("regexp", $.value),
                    field("replacement", $.value),
                    optional(seq("(", field("count", $.value), ")")),
                ),
            ),

        _action: ($) =>
            choice(
                // File operations
                $.action_copy,
                $.action_copy_existing,
                $.action_copy_existing_regexp,
                $.action_copy_large,
                $.action_copy_random,
                $.action_copy_all_gam_files,
                $.action_compile,
                $.action_create,
                $.action_extend_top,
                $.action_extend_bottom,
                $.action_append,
                $.action_append_col,
                $.action_append_outer,
                $.action_delete,
                $.action_move,
                $.action_mkdir,
                // Control flow
                $.action_if,
                $.action_match,
                $.action_try,
                $.outer_for,
                $.outer_while,
                $.action_for_each,
                $.action_php_each,
                // Variables
                $.action_outer_set,
                $.action_outer_sprint,
                $.action_outer_text_sprint,
                $.action_outer_sprintf,
                $.action_with_tra,
                $.action_with_scope,
                $.action_add_journal,
                $.action_outer_patch,
                $.action_outer_patch_save,
                $.action_outer_inner_patch,
                $.action_outer_inner_patch_save,
                // Includes
                $.action_include,
                $.action_reinclude,
                // Functions/macros
                $.action_define_macro,
                $.action_define_patch_macro,
                $.action_define_function,
                $.action_define_patch_function,
                $.action_define_dimorphic_function,
                $.action_launch_macro,
                $.action_launch_function,
                // Arrays
                $.action_define_array,
                $.action_define_associative_array,
                $.action_clear_array,
                // String/tra
                $.action_string_set,
                $.action_load_tra,
                // Game data modification
                $.action_add_projectile,
                $.action_add_sectype,
                $.action_add_area_type,
                $.action_add_spell,
                $.action_add_kit,
                $.action_add_music,
                // System/execution
                $.action_at_now,
                $.action_at_interactive_now,
                $.action_at_exit,
                $.action_at_interactive_exit,
                $.action_at_uninstall,
                $.action_at_interactive_uninstall,
                $.action_at_uninstall_exit,
                $.action_at_interactive_uninstall_exit,
                $.action_uninstall,
                $.action_bash_for,
                $.action_decompress_biff,
                $.action_make_biff,
                // Misc
                $.action_print,
                $.action_log,
                $.action_warn,
                $.action_fail,
                $.action_clear_memory,
                $.action_silent,
                $.action_verbose,
                $.action_to_upper,
                $.action_to_lower,
                $.action_get_strref,
                $.action_disable_from_key,
                $.action_get_resource_array,
                $.action_register_uninstall,
                $.action_random_seed,
                $.action_readln,
                $.inlined_file,
            ),

        // File operations
        action_copy: ($) =>
            seq(
                "COPY",
                optional($._opt_no_backup),
                optional($._opt_glob),
                repeat1($.file_pair),
                optional($.patches),
                optional($.when),
            ),

        action_copy_existing: ($) =>
            seq(
                "COPY_EXISTING",
                optional($._opt_no_backup),
                repeat1($.file_pair),
                optional($.patches),
                optional($.when),
            ),

        action_copy_existing_regexp: ($) =>
            seq(
                "COPY_EXISTING_REGEXP",
                optional($._opt_no_backup),
                optional($._opt_glob),
                repeat1($.file_pair),
                optional($.patches),
                optional($.when),
            ),

        action_copy_large: ($) => seq("COPY_LARGE", optional($._opt_no_backup), optional($._opt_glob), $.file_pair),

        file_pair: ($) => seq(field("from", $.value), field("to", $.value)),

        // Patches inside actions - either bare patches or BEGIN/END block
        // Named rule (not hidden) so context detection can find it in AST
        when: ($) =>
            prec.right(
                repeat1(
                    choice(
                        seq("IF", field("if_resource", $.value)),
                        seq("UNLESS", field("unless_resource", $.value)),
                        seq("IF_SIZE_IS", field("size", $.value)),
                        "IF_EXISTS",
                        "BUT_ONLY",
                        "BUT_ONLY_IF_IT_CHANGES",
                    ),
                ),
            ),

        action_compile: ($) =>
            prec.right(
                seq(
                    "COMPILE",
                    optional(choice("EVALUATE_BUFFER", "EVAL")),
                    repeat1(field("source", $.value)),
                    optional(choice("EVALUATE_BUFFER", "EVAL")),
                    optional(seq("USING", repeat1(field("tra", $.value)))),
                ),
            ),

        action_extend_top: extendAction("EXTEND_TOP"),
        action_extend_bottom: extendAction("EXTEND_BOTTOM"),

        action_append: appendAction("APPEND"),
        action_append_col: appendAction("APPEND_COL"),

        action_append_outer: ($) =>
            seq("APPEND_OUTER", field("file", $.value), field("text", $.value), optional("KEEP_CRLF")),

        action_delete: ($) => prec.right(seq("DELETE", optional($._opt_no_backup), repeat1(field("file", $.value)))),

        action_move: ($) =>
            prec.right(
                seq(
                    "MOVE",
                    optional($._opt_no_backup),
                    choice(
                        // Glob pattern: (directory pattern) destination
                        seq("(", field("dir", $.value), field("pattern", $.value), ")", field("to", $.value)),
                        // Standard file pairs
                        repeat1($.file_pair),
                    ),
                ),
            ),

        action_mkdir: ($) => prec.right(seq("MKDIR", repeat1(field("dir", $.value)))),

        action_create: ($) =>
            seq(
                "CREATE",
                field("type", $.identifier),
                optional(seq("VERSION", field("version", $.value))),
                field("resref", $.value),
                optional($.patches),
            ),

        // Control flow
        action_if: ($) =>
            seq(
                "ACTION_IF",
                field("condition", $.value),
                optional("THEN"),
                "BEGIN",
                repeat($._action),
                "END",
                optional(
                    seq(
                        "ELSE",
                        choice(
                            seq("BEGIN", repeat($._action), "END"),
                            $.action_if,
                            $._action, // Single action without BEGIN...END
                        ),
                    ),
                ),
            ),

        action_outer_set: ($) =>
            seq(
                "OUTER_SET",
                optional(choice("EVAL", "EVALUATE_BUFFER", "GLOBAL")),
                choice(
                    seq(field("var", $._assignable), $._assign_op, field("value", $.value)),
                    seq(choice("++", "--"), field("var", $._assignable)),
                ),
            ),

        action_outer_sprint: sprintOpGlobal("OUTER_SPRINT"),
        action_outer_text_sprint: sprintOpGlobal("OUTER_TEXT_SPRINT"),

        action_outer_sprintf: sprintfOp("OUTER_SPRINTF"),

        // Local variables (only valid inside macro bodies)
        action_include: ($) => prec.right(seq("INCLUDE", repeat1(field("file", $.value)))),
        int_var_decl: ($) => seq("INT_VAR", repeat(seq(choice($.identifier, $.string), "=", $.value))),

        str_var_decl: ($) => seq("STR_VAR", repeat(seq(choice($.identifier, $.string), "=", $.value))),

        ret_decl: ($) => seq("RET", repeat1($.identifier)),
        action_launch_function: ($) =>
            seq(
                choice("LAUNCH_ACTION_FUNCTION", "LAF"),
                field("name", choice($.identifier, $.string)),
                repeat($._func_call_param),
                "END",
            ),

        _func_call_param: ($) => choice($.int_var_call, $.str_var_call, $.ret_call, $.ret_array_call),

        // In function calls, left-hand side of assignments is always an identifier/string, not an expression
        action_string_set: ($) =>
            prec.right(
                seq(
                    choice("STRING_SET", "STRING_SET_EVALUATE"),
                    repeat1(seq(field("strref", $.value), field("value", $.value))),
                ),
            ),

        action_at_exit: ($) => seq("AT_EXIT", field("command", $.value), optional("EXACT")),
        action_at_interactive_exit: ($) => seq("AT_INTERACTIVE_EXIT", field("command", $.value), optional("EXACT")),
        action_at_uninstall: ($) => seq("AT_UNINSTALL", field("command", $.value), optional("EXACT")),
        action_at_interactive_uninstall: ($) =>
            seq("AT_INTERACTIVE_UNINSTALL", field("command", $.value), optional("EXACT")),
        action_at_uninstall_exit: ($) => seq("AT_UNINSTALL_EXIT", field("command", $.value), optional("EXACT")),
        action_at_interactive_uninstall_exit: ($) =>
            seq("AT_INTERACTIVE_UNINSTALL_EXIT", field("command", $.value), optional("EXACT")),

        action_at_now: ($) =>
            seq("AT_NOW", optional(field("var", $.identifier)), field("command", $.value), optional("EXACT")),
        action_at_interactive_now: ($) =>
            seq(
                "AT_INTERACTIVE_NOW",
                optional(field("var", $.identifier)),
                field("command", $.value),
                optional("EXACT"),
            ),

        action_make_biff: ($) =>
            seq("MAKE_BIFF", field("name", $.value), "BEGIN", repeat1($.directory_file_regexp), "END"),

        // Shared by MAKE_BIFF, ACTION_BASH_FOR, PATCH_BASH_FOR
        directory_file_regexp: ($) =>
            seq(
                field("directory", $.value),
                optional(choice("EVALUATE_REGEXP", "EXACT_MATCH")),
                field("pattern", $.value),
            ),

        // Print/messaging (using helpers)
        action_print: printOp("PRINT"),
        action_log: printOp("LOG"),
        action_warn: printOp("WARN"),
        action_fail: printOp("FAIL"),

        action_clear_memory: ($) =>
            choice("CLEAR_MEMORY", "CLEAR_ARRAYS", "CLEAR_CODES", "CLEAR_INLINED", "CLEAR_EVERYTHING", "CLEAR_IDS_MAP"),

        action_get_strref: ($) => seq("ACTION_GET_STRREF", field("strref", $.value), field("var", $.identifier)),

        action_get_resource_array: ($) => seq("GET_RESOURCE_ARRAY", field("name", $.value), field("regexp", $.value)),
