grammars/weidu-tp2/test/corpus/actions.txt
================================================================================
COPY action
================================================================================

COPY ~mymod/sword.itm~ ~override/m#sword.itm~

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY with multiple pairs
================================================================================

COPY ~mymod/a.itm~ ~override/a.itm~
     ~mymod/b.itm~ ~override/b.itm~

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY_EXISTING action
================================================================================

COPY_EXISTING ~spell.spl~ ~override~

--------------------------------------------------------------------------------

(source_file
  (action_copy_existing
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY_EXISTING_REGEXP with GLOB
================================================================================

COPY_EXISTING_REGEXP GLOB ~HARM.*.ITM~ ~override~

--------------------------------------------------------------------------------

(source_file
  (action_copy_existing_regexp
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY with no backup (+)
================================================================================

COPY + ~mymod/temp.itm~ ~override~

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY inlined only (-)
================================================================================

COPY - ~mymod/temp.itm~ ~override~

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
DELETE action
================================================================================

DELETE ~mymod/temp.txt~

--------------------------------------------------------------------------------

(source_file
  (action_delete
    file: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
MKDIR action
================================================================================

MKDIR ~mymod/data~

--------------------------------------------------------------------------------

(source_file
  (action_mkdir
    dir: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
MKDIR with multiple directories
================================================================================

MKDIR ~area0015~
      ~area3100~
      ~area3200~

--------------------------------------------------------------------------------

(source_file
  (action_mkdir
    dir: (value
      (string
        (tilde_string
          (tilde_content))))
    dir: (value
      (string
        (tilde_string
          (tilde_content))))
    dir: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
MOVE action
================================================================================

MOVE ~mymod/old.txt~ ~mymod/new.txt~

--------------------------------------------------------------------------------

(source_file
  (action_move
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
MOVE with no backup (+)
================================================================================

MOVE + ~mymod/old.txt~ ~mymod/new.txt~

--------------------------------------------------------------------------------

(source_file
  (action_move
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
MOVE with multiple file pairs
================================================================================

MOVE ~old1.txt~ ~new1.txt~
     ~old2.txt~ ~new2.txt~

--------------------------------------------------------------------------------

(source_file
  (action_move
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COMPILE action
================================================================================

COMPILE ~mymod/scripts~

--------------------------------------------------------------------------------

(source_file
  (action_compile
    source: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
COMPILE with USING
================================================================================

COMPILE ~mymod/dialog.d~ USING ~mymod/lang/%s/dialog.tra~

--------------------------------------------------------------------------------

(source_file
  (action_compile
    source: (value
      (string
        (tilde_string
          (tilde_content))))
    tra: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
CREATE action
================================================================================

CREATE ITM ~m#sword~

--------------------------------------------------------------------------------

(source_file
  (action_create
    type: (identifier)
    resref: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
CLEAR_MEMORY action
================================================================================

CLEAR_MEMORY

--------------------------------------------------------------------------------

(source_file
  (action_clear_memory))

================================================================================
ACTION_IF
================================================================================

ACTION_IF 1 THEN BEGIN
  PRINT ~yes~
END

--------------------------------------------------------------------------------

(source_file
  (action_if
    condition: (value
      (number))
    (action_print
      message: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
OUTER_SET
================================================================================

OUTER_SET myvar = 5

--------------------------------------------------------------------------------

(source_file
  (action_outer_set
    var: (identifier)
    value: (value
      (number))))

================================================================================
INCLUDE
================================================================================

INCLUDE ~mymod/lib.tpa~

--------------------------------------------------------------------------------

(source_file
  (action_include
    file: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
DEFINE_ACTION_FUNCTION
================================================================================

DEFINE_ACTION_FUNCTION my_func BEGIN
  PRINT ~hello~
END

--------------------------------------------------------------------------------

(source_file
  (action_define_function
    name: (identifier)
    (action_print
      message: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
DEFINE_DIMORPHIC_FUNCTION
================================================================================

DEFINE_DIMORPHIC_FUNCTION my_dim
  INT_VAR x = 0
  STR_VAR s = ~~
  RET r
BEGIN
  PRINT ~hi~
END

--------------------------------------------------------------------------------

(source_file
  (action_define_dimorphic_function
    name: (identifier)
    (int_var_decl
      (identifier)
      (value
        (number)))
    (str_var_decl
      (identifier)
      (value
        (string
          (tilde_string))))
    (ret_decl
      (identifier))
    (action_print
      message: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
LAF call
================================================================================

LAF my_func END

--------------------------------------------------------------------------------

(source_file
  (action_launch_function
    name: (identifier)))

================================================================================
AT_EXIT
================================================================================

AT_EXIT ~mymod/cleanup.sh~

--------------------------------------------------------------------------------

(source_file
  (action_at_exit
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_EXIT with EXACT
================================================================================

AT_EXIT ~ren "%bg1_dir%\baldur.bgt" baldur.ini~ EXACT

--------------------------------------------------------------------------------

(source_file
  (action_at_exit
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_INTERACTIVE_EXIT with EXACT
================================================================================

AT_INTERACTIVE_EXIT ~echo done~ EXACT

--------------------------------------------------------------------------------

(source_file
  (action_at_interactive_exit
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_UNINSTALL
================================================================================

AT_UNINSTALL ~mymod/uninstall.bat~

--------------------------------------------------------------------------------

(source_file
  (action_at_uninstall
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_UNINSTALL with EXACT
================================================================================

AT_UNINSTALL ~del "%bg1_dir%\baldur.ini"~ EXACT

--------------------------------------------------------------------------------

(source_file
  (action_at_uninstall
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_INTERACTIVE_UNINSTALL
================================================================================

AT_INTERACTIVE_UNINSTALL ~echo removing~

--------------------------------------------------------------------------------

(source_file
  (action_at_interactive_uninstall
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_UNINSTALL_EXIT
================================================================================

AT_UNINSTALL_EXIT ~cleanup.bat~

--------------------------------------------------------------------------------

(source_file
  (action_at_uninstall_exit
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_INTERACTIVE_UNINSTALL_EXIT
================================================================================

AT_INTERACTIVE_UNINSTALL_EXIT ~final_cleanup.sh~ EXACT

--------------------------------------------------------------------------------

(source_file
  (action_at_interactive_uninstall_exit
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_NOW with variable
================================================================================

AT_NOW result ~echo test~

--------------------------------------------------------------------------------

(source_file
  (action_at_now
    var: (identifier)
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_INTERACTIVE_NOW
================================================================================

AT_INTERACTIVE_NOW ~echo interactive~

--------------------------------------------------------------------------------

(source_file
  (action_at_interactive_now
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
AT_INTERACTIVE_NOW with variable and EXACT
================================================================================

AT_INTERACTIVE_NOW output ~echo test~ EXACT

--------------------------------------------------------------------------------

(source_file
  (action_at_interactive_now
    var: (identifier)
    command: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
MAKE_BIFF simple
================================================================================

MAKE_BIFF ~area0015~ BEGIN ~area0015~ ~^.*$~ END

--------------------------------------------------------------------------------

(source_file
  (action_make_biff
    name: (value
      (string
        (tilde_string
          (tilde_content))))
    (directory_file_regexp
      directory: (value
        (string
          (tilde_string
            (tilde_content))))
      pattern: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
MAKE_BIFF with EXACT_MATCH
================================================================================

MAKE_BIFF ~area3100~ BEGIN ~area3100~ ~^.*$~
                           ~bgt/tilesets/mos~ EXACT_MATCH ~ar3101.mos~ END

--------------------------------------------------------------------------------

(source_file
  (action_make_biff
    name: (value
      (string
        (tilde_string
          (tilde_content))))
    (directory_file_regexp
      directory: (value
        (string
          (tilde_string
            (tilde_content))))
      pattern: (value
        (string
          (tilde_string
            (tilde_content)))))
    (directory_file_regexp
      directory: (value
        (string
          (tilde_string
            (tilde_content))))
      pattern: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
MAKE_BIFF with EVALUATE_REGEXP
================================================================================

MAKE_BIFF ~mybiff~ BEGIN ~mydir~ EVALUATE_REGEXP ~^.*\.itm$~ END

--------------------------------------------------------------------------------

(source_file
  (action_make_biff
    name: (value
      (string
        (tilde_string
          (tilde_content))))
    (directory_file_regexp
      directory: (value
        (string
          (tilde_string
            (tilde_content))))
      pattern: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
OUTER_SET with GLOBAL
================================================================================

OUTER_SET GLOBAL myvar = 5

--------------------------------------------------------------------------------

(source_file
  (action_outer_set
    var: (identifier)
    value: (value
      (number))))

================================================================================
OUTER_SET with EVAL
================================================================================

OUTER_SET EVAL myvar = 5

--------------------------------------------------------------------------------

(source_file
  (action_outer_set
    var: (identifier)
    value: (value
      (number))))

================================================================================
OUTER_SET with EVALUATE_BUFFER
================================================================================

OUTER_SET EVALUATE_BUFFER myvar = 5

--------------------------------------------------------------------------------

(source_file
  (action_outer_set
    var: (identifier)
    value: (value
      (number))))

================================================================================
OUTER_SPRINT with GLOBAL
================================================================================

OUTER_SPRINT GLOBAL myvar ~hello~

--------------------------------------------------------------------------------

(source_file
  (action_outer_sprint
    var: (value
      (variable_ref
        (identifier)))
    value: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
OUTER_TEXT_SPRINT with GLOBAL
================================================================================

OUTER_TEXT_SPRINT GLOBAL myvar ~hello~

--------------------------------------------------------------------------------

(source_file
  (action_outer_text_sprint
    var: (value
      (variable_ref
        (identifier)))
    value: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
OUTER_SPRINTF
================================================================================

OUTER_SPRINTF myvar ~format %d~ (5)

--------------------------------------------------------------------------------

(source_file
  (action_outer_sprintf
    var: (value
      (variable_ref
        (identifier)))
    format: (value
      (string
        (tilde_string
          (tilde_content))))
    (value
      (number))))

================================================================================
OUTER_SPRINTF without args
================================================================================

OUTER_SPRINTF myvar ~just format~

--------------------------------------------------------------------------------

(source_file
  (action_outer_sprintf
    var: (value
      (variable_ref
        (identifier)))
    format: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
OUTER_SET with GLOBAL and increment
================================================================================

OUTER_SET GLOBAL ++myvar

--------------------------------------------------------------------------------

(source_file
  (action_outer_set
    var: (identifier)))

================================================================================
GET_RESOURCE_ARRAY
================================================================================

GET_RESOURCE_ARRAY myarray ~^.*\.itm$~

--------------------------------------------------------------------------------

(source_file
  (action_get_resource_array
    name: (value
      (variable_ref
        (identifier)))
    regexp: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
REGISTER_UNINSTALL
================================================================================

REGISTER_UNINSTALL ~mymod/uninstall.sh~

--------------------------------------------------------------------------------

(source_file
  (action_register_uninstall
    file: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
ACTION_PHP_EACH
================================================================================

ACTION_PHP_EACH myarray AS key => val BEGIN
	OUTER_SPRINT myvar ~hello~
END

--------------------------------------------------------------------------------

(source_file
  (action_php_each
    array: (value
      (variable_ref
        (identifier)))
    key_var: (identifier)
    value_var: (identifier)
    (action_outer_sprint
      var: (value
        (variable_ref
          (identifier)))
      value: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
ACTION_PHP_EACH with a string value variable
================================================================================

ACTION_PHP_EACH myarray AS data => ~~ BEGIN
	OUTER_SPRINT myvar ~hello~
END

--------------------------------------------------------------------------------

(source_file
  (action_php_each
    array: (value
      (variable_ref
        (identifier)))
    key_var: (identifier)
    value_var: (string
      (tilde_string))
    (action_outer_sprint
      var: (value
        (variable_ref
          (identifier)))
      value: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY_LARGE with several file pairs
================================================================================

COPY_LARGE + ~a.are~ ~b.are~
	~c.are~ ~d.are~

--------------------------------------------------------------------------------

(source_file
  (action_copy_large
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
APPEND_OUTER with a no-backup modifier
================================================================================

APPEND_OUTER + ~mymod/out.tra~ ~text~

--------------------------------------------------------------------------------

(source_file
  (action_append_outer
    file: (value
      (string
        (tilde_string
          (tilde_content))))
    text: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
ACTION_TO_UPPER on a variable whose name starts with a digit
================================================================================

ACTION_TO_UPPER 25join

--------------------------------------------------------------------------------

(source_file
  (action_to_upper
    var: (var_name_numeric)))

================================================================================
DEFINE_ACTION_FUNCTION whose name starts with a digit
================================================================================

DEFINE_ACTION_FUNCTION 2DA_MISSING_COLS
BEGIN
END

--------------------------------------------------------------------------------

(source_file
  (action_define_function
    name: (var_name_numeric)))

================================================================================
ACTION_GET_STRREF into a quoted variable
================================================================================

ACTION_GET_STRREF col2 "strref"

--------------------------------------------------------------------------------

(source_file
  (action_get_strref
    strref: (value
      (variable_ref
        (identifier)))
    var: (string
      (double_string
        (double_content)))))

================================================================================
APPEND_OUTER with an UNLESS clause
================================================================================

APPEND_OUTER ~out.2da~ ~text~ UNLESS ~^text~

--------------------------------------------------------------------------------

(source_file
  (action_append_outer
    file: (value
      (string
        (tilde_string
          (tilde_content))))
    text: (value
      (string
        (tilde_string
          (tilde_content))))
    (when
      unless_resource: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
GET_DIRECTORY_ARRAY and GET_FILE_ARRAY
================================================================================

GET_DIRECTORY_ARRAY myarray ~%USER_DIRECTORY%/save~ ~~
GET_FILE_ARRAY other ~override~ ~^.*\.itm$~

--------------------------------------------------------------------------------

(source_file
  (action_get_directory_array
    name: (value
      (variable_ref
        (identifier)))
    directory: (value
      (string
        (tilde_string
          (tilde_content))))
    regexp: (value
      (string
        (tilde_string))))
  (action_get_file_array
    name: (value
      (variable_ref
        (identifier)))
    directory: (value
      (string
        (tilde_string
          (tilde_content))))
    regexp: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
Function parameter names starting with a digit
================================================================================

DEFINE_ACTION_FUNCTION f
	STR_VAR
	2da = ~~
BEGIN
END

--------------------------------------------------------------------------------

(source_file
  (action_define_function
    name: (identifier)
    (str_var_decl
      (var_name_numeric)
      (value
        (string
          (tilde_string))))))

================================================================================
APPEND_COL_OUTER
================================================================================

APPEND_COL_OUTER + ~out.2da~ ~text~

--------------------------------------------------------------------------------

(source_file
  (action_append_col_outer
    file: (value
      (string
        (tilde_string
          (tilde_content))))
    text: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
ACTION_GET_STRREF female and sound variants
================================================================================

ACTION_GET_STRREF_F i female
ACTION_GET_STRREF_S i male_sound
ACTION_GET_STRREF_FS i female_sound

--------------------------------------------------------------------------------

(source_file
  (action_get_strref
    strref: (value
      (variable_ref
        (identifier)))
    var: (identifier))
  (action_get_strref
    strref: (value
      (variable_ref
        (identifier)))
    var: (identifier))
  (action_get_strref
    strref: (value
      (variable_ref
        (identifier)))
    var: (identifier)))

================================================================================
ALTER_TLK_LIST
================================================================================

ALTER_TLK_LIST BEGIN MATCH2 END BEGIN REPLACE_TEXTUALLY ~^~ ~BG1 ~ END

--------------------------------------------------------------------------------

(source_file
  (action_alter_tlk_list
    (value
      (variable_ref
        (identifier)))
    (patch_replace_textually
      regexp: (value
        (string
          (tilde_string
            (tilde_content))))
      replacement: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
STRING_SET_EVALUATE with male/female strings and sound refs
================================================================================

STRING_SET_EVALUATE i ~%male%~ [%male_sound%] ~%female%~ [%female_sound%]

--------------------------------------------------------------------------------

(source_file
  (action_string_set
    strref: (value
      (variable_ref
        (identifier)))
    male: (value
      (string
        (tilde_string
          (tilde_content))))
    (sound_ref
      sound: (variable_ref
        (identifier)))
    female: (value
      (string
        (tilde_string
          (tilde_content))))
    (sound_ref
      sound: (variable_ref
        (identifier)))))

================================================================================
STRING_SET with a USING tra file
================================================================================

STRING_SET ~73245~ @123456789 USING ~bgt/title.tra~

--------------------------------------------------------------------------------

(source_file
  (action_string_set
    strref: (value
      (string
        (tilde_string
          (tilde_content))))
    male: (value
      (tra_ref))
    tra: (value
      (string
        (tilde_string
          (tilde_content))))))
